# create-llama-ollama

./: .gitignore  README.md  dockerfile  dockerfile-amd64  pyproject.toml
backend/: config.json  main.py  refresh_index.py
backend/app/: __init__.py  conn_llm.py  context.py  storage.py
backend/app/api/routers/: chat.py  index.py
backend/app/engine/: __init__.py  agents.py  context.py  generate.py  index.py  loader.py  query_tools.py  utils.py
backend/app/public/: 404.html  index.html  index.txt
backend/app/static/_next/static/chunks/: 69-2dd335a42df48c81.js  77-6cbd386b7cb57e62.js  main-app-1444d65fd19930be.js  main-f1b04c206ba955e4.js  webpack-d074f59e6fb5743e.js
backend/app/static/_next/static/chunks/app/: layout-386c8c158172a3ec.js  page-887ea91a8c950aff.js
backend/app/static/_next/static/css/: 3ffa7081b01d7ba0.css
backend/data/: 21-CFR-Part-11.txt
frontend/: package-lock.json  package.json
frontend/app/components/ui/chat/: chat-input.tsx
